# waxwing

./: .gitignore  README.md  create_fonts.sh  create_palettes.py  examples.ipynb  make_Book_fonts.sh  pyproject.toml
waxwing/: __init__.py  palettes.py  waxwing.py
